# scholardoc

./: .gitignore  CHANGELOG.md  CLAUDE.md  QUESTIONS.md  README.md  REQUIREMENTS.md  ROADMAP.md  SPEC.md  pyproject.toml  test_files
.claude/: settings.json
.claude/agents/: analyze-logs-agent.md  code-reviewer.md  create-pr-agent.md  diagnose-agent.md  diagnostic-agent.md  documentation-reviewer.md  experiment-reviewer.md  exploration-reviewer.md  improve-agent.md  improvement-reviewer.md  plan-reviewer.md  review-pr-agent.md
.claude/commands/: analyze-logs.md  auto.md  checkpoint.md  create-pr.md  debug.md  diagnose.md  document.md  explore.md  implement.md  improve.md  init.md  plan.md  refactor.md  release.md  resume.md  review-pr.md  review.md  signal.md  spike.md  tdd.md
.claude/hooks/: block-dangerous.py  enforce-branch-workflow.py  post-edit-quality.py  pre-commit-reminder.py  session-logger.md  stop-verify.py
.claude/logs/: session_20251214_000653.md  session_20251214_001840.md  session_20251214_005305.md  session_20251214_005419.md  session_20251214_005436.md  session_20251214_005542.md  session_20251214_005635.md  session_20251214_005843.md  session_20251214_011522.md  session_20251215_125121.md  session_20251226_021537.md  session_20251226_030418.md  session_20251226_030941.md  session_20251226_031029.md  session_20251226_031636.md  session_20251226_032840.md  session_20251226_033440.md  session_20251226_033658.md  session_20251226_111707.md  session_20251226_120654.md  session_20251229_130233.md  session_20251229_132957.md  session_20251229_141338.md  session_20251229_141911.md  session_20251229_155655.md  session_20251229_155919.md  session_20251229_161148.md  session_20251229_161546.md  session_20251229_162100.md  session_20251229_162828.md  session_20260106_073947.md  session_20260106_074201.md  session_20260106_100811.md  session_20260106_102103.md  session_20260106_103355.md  session_20260106_214521.md  session_20260106_224158.md
.claude/logs/archive/: plan_convert_orchestrator.md  plan_document_profiles.md  plan_ocr_implementation_session2.md  plan_ocr_implementation_session2_REVISED.md  plan_ocr_integration.md
.claude/logs/signals/: .gitkeep
.github/: pull_request_template.md
.github/workflows/: ci.yml
.serena/: project.yml
docs/: AUTOMATION_SETUP.md  BEST_PRACTICES_ANALYSIS.md  COMMANDS.md  GIT_WORKFLOW.md  INIT_TEMPLATES.md  LOG_ANALYSIS_AUTOMATION.md  RULES.md  TESTING_METHODOLOGY.md  VISION.md  parallelization-guide.md
docs/adr/: ADR-001-pdf-library-choice.md  ADR-002-ocr-pipeline-architecture.md  ADR-003-line-break-detection.md  ADR-004-ocr-source-tracking.md
docs/decisions/: DECISION_LOG.md
docs/design/: CORE_ABSTRACTION.md  CORE_REPRESENTATION.md  CUSTOM_OCR_DESIGN.md  EXTENSIBILITY.md  FEEDBACK_SYSTEM.md  GROUND_TRUTH_STRATEGY.md  OCR_STRATEGY.md  PROCESSING_ARCHITECTURE.md  PROPRIETARY_CITATIONS.md  QUALITY_FILTERING.md  SAMPLE_PDF_ORGANIZATION.md  SOUS_ERASURE_DESIGN.md  STRUCTURE_EXTRACTION.md
examples/: basic_usage.py
ground_truth/: ANNOTATION_UI_DESIGN.md  COMPREHENSIVE_TEST_PLAN.md  LAYOUT_TEST_PLAN.md  PIPELINE_INTEGRATION.md  SCHEMA.md  TESTING_METHODOLOGY.md  baseline_results.json  schema_v4_comprehensive.json  selected_pages.json  validation_set.json
ground_truth/baselines/: initial.json
ground_truth/candidates/: README.md  derrida_acts_candidates.json  derrida_dissemination_candidates.json  heidegger_bat_candidates.json  kant_candidates.json
ground_truth/documents/: derrida_footnotes_sample.yaml
ground_truth/lib/: __init__.py  matching.py  metrics.py  normalize.py  reports.py
ground_truth/ocr_errors/: kant_critique_samples.json  ocr_error_pairs.json  validated_samples.json
ground_truth/ocr_quality/: kant_review_batches.json  kant_review_manifest.json  unified_ground_truth.json
ground_truth/ocr_quality/batches/: ComayRebecca_MourningSickness_HegelAndTheFrenchRevolution_batch_01.json  ComayRebecca_MourningSickness_HegelAndTheFrenchRevolution_batch_02.json  ComayRebecca_MourningSickness_HegelAndTheFrenchRevolution_batch_03.json  ComayRebecca_MourningSickness_HegelAndTheFrenchRevolution_batch_04.json  ComayRebecca_MourningSickness_HegelAndTheFrenchRevolution_batch_05.json  (+70 more)
ground_truth/scripts/: annotate_ui.py  compare.py  evaluate.py  generate_draft.py  validate.py  visualize.py
scholardoc/: __init__.py  config.py  convert.py  exceptions.py  models.py
scholardoc/extractors/: __init__.py  cascading.py  profiles.py  sources.py  validators.py
scholardoc/normalizers/: __init__.py  ocr_correction.py  ocr_pipeline.py
scholardoc/ocr/: __init__.py  detector.py  dictionary.py  linebreak.py  pipeline.py  reocr.py
scholardoc/readers/: __init__.py  pdf_reader.py
scholardoc/utils/: __init__.py
scholardoc/writers/: __init__.py
spikes/: 01_pymupdf_exploration.py  02_library_comparison.py  03_heading_detection.py  04_footnote_detection.py  05_ocr_quality_survey.py  06_ground_truth.py  06a_extract_tricky_samples.py  06b_validate_samples.py  06c_real_ground_truth.py  07_annotation_review.py  08_embedding_robustness.py  09_trocr_reocr.py  10_tesseract_reocr.py  11_rag_chunk_quality.py  12_smart_spellcheck.py  13_spellcheck_risk.py  14_quality_filtering_calibration.py  15_ground_truth_review.py  16_ground_truth_collection.py  17_stratified_sample.py  18_aggregate_ground_truth.py  19_create_batches.py  20_analyze_review_pages.py  21_comprehensive_review.py  22_final_review.py  23_ocr_pipeline_tuning.py  24_toc_detection.py  25_pdf_outline_quality.py  26_structure_fusion.py  27_document_profile_detection.py  28_ocr_cleaner_evaluation.py  29_ocr_pipeline_design.py  30_validation_framework.py  31_candidate_page_finder.py  32_layout_segmentation.py  FINDINGS.md  docling_batched.py  ground-truth-annotator.md
tests/: conftest.py
tests/integration/: __init__.py  test_convert.py  test_ground_truth_regression.py
tests/unit/: test_basic.py  test_extractors.py  test_models.py  test_ocr_correction.py  test_ocr_module.py  test_ocr_pipeline.py  test_pdf_reader.py  test_profiles.py
(+119 files in other folders)
