[project]
name = "scholardoc"
version = "0.1.0"
description = "Convert scholarly documents (PDF, EPUB) to structured Markdown for RAG pipelines"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = [
    "pdf",
    "markdown",
    "rag",
    "scholarly",
    "document-processing",
    "text-extraction"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: General",
]

# Phase 1 dependencies - minimal
dependencies = [
    "pymupdf>=1.24.0",
]

[project.optional-dependencies]
# Phase 2+
enhanced = [
    "pymupdf4llm>=0.0.10",
]
# Phase 3
epub = [
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]
# Library comparison (for spikes)
comparison = [
    "pdfplumber>=0.10.0",
    "pypdf>=4.0.0",
    "pymupdf4llm>=0.0.10",
]
# Development
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.100.0",
    "ruff>=0.4.0",
]
# Everything
all = [
    "scholardoc[enhanced,epub,comparison,dev]",
]

[project.urls]
Homepage = "https://github.com/yourusername/scholardoc"
Documentation = "https://github.com/yourusername/scholardoc#readme"
Repository = "https://github.com/yourusername/scholardoc"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scholardoc"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["scholardoc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
