[project]
name = "scholardoc"
version = "0.1.0"
description = "Extract structured knowledge from scholarly PDFs for RAG, Anki, research tools, and more"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = [
    "pdf",
    "scholarly",
    "document-processing",
    "text-extraction",
    "rag",
    "anki",
    "research",
    "knowledge-management"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: General",
]

# Phase 1 dependencies - Core only (OCR engines are optional)
dependencies = [
    "pymupdf>=1.24.0",
    "pyspellchecker>=0.8.4",
    "pillow>=11.3.0",
]

[project.optional-dependencies]
# Phase 2+
enhanced = [
    "pymupdf4llm>=0.0.10",
]
# Phase 3
epub = [
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]
# Library comparison (for spikes)
comparison = [
    "pdfplumber>=0.10.0",
    "pypdf>=4.0.0",
    "pymupdf4llm>=0.0.10",
    "easyocr>=1.7.2",
    "sentence-transformers>=5.2.0",
]
# OCR correction (CPU-optimized, Tesseract)
ocr = [
    "pytesseract>=0.3.10",
]
# OCR correction (GPU-optimized, docTR + Tesseract fallback)
ocr-gpu = [
    "python-doctr>=0.6.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pytesseract>=0.3.10",
]
# Contextual OCR correction with BERT
contextual = [
    "ocrfixr>=1.5.0",
]
# Multilingual support (language detection + word frequency)
multilingual = [
    "langdetect>=1.0.9",  # Google's language detection, lightweight
    "wordfreq>=3.0.0",    # Word frequency data for 40+ languages
]
# Development
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.100.0",
    "ruff>=0.4.0",
]
# Ground truth annotation and evaluation tools
ground-truth = [
    "streamlit>=1.30.0",
    "streamlit-ace>=0.1.0",
    "rapidfuzz>=3.0.0",
    "tabulate>=0.9.0",
    "pyyaml>=6.0.0",
]
# Everything
all = [
    "scholardoc[enhanced,epub,comparison,dev,ground-truth]",
]

[project.urls]
Homepage = "https://github.com/yourusername/scholardoc"
Documentation = "https://github.com/yourusername/scholardoc#readme"
Repository = "https://github.com/yourusername/scholardoc"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scholardoc"]

# UV configuration for PyTorch CUDA 11.8 (supports GTX 1080 Ti / sm_61)
[tool.uv]
index-url = "https://pypi.org/simple"
extra-index-url = ["https://download.pytorch.org/whl/cu118"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["scholardoc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
